--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 .section-heading {
   max-width: 827px;
   text-align: center;
+  margin: 0 auto;
 }
 .section-heading h2 {
   font-size: 35px;
@@ -128,4 +129,78 @@ nav .menu a {
 }
 .about-info .info-card h4 {
   font-size: 20px;
+}
+#skill {
+  padding-top: 130px;
+}
+#skill .skill-container {
+  width: 71%;
+  max-width: 1140px;
+  margin: 0 auto;
+}
+#skill .skill-container .skill-box {
+  display: flex;
+  gap: 24px;
+}
+.skill-box .skill-card {
+  padding: 30px;
+
+  /* border: 1px solid red; */
+  box-shadow: 0 6px 50px 0 #00000020;
+  max-width: 267px;
+}
+.skill-card img {
+  max-width: 44px;
+  margin-bottom: 30px;
+}
+.skill-card h3 {
+  font-size: 20px;
+  color: #181818;
+  margin-bottom: 20px;
+}
+.skill-card p {
+  font-size: 16px;
+
+  color: #757575;
+  line-height: 28px;
+}
+#resume {
+  padding-top: 130px;
+}
+#resume .resume-content {
+  width: 71%;
+  max-width: 1140px;
+  margin: 113px auto 0;
+  display: flex;
+  gap: 24px;
+}
+.resume-content hr {
+  margin: 30px 0;
+}
+.resume-content .section-title {
+  font-size: 30px;
+  font-weight: bold;
+  color: #474747;
+  margin-bottom: 30px;
+}
+.resume-card {
+  max-width: 511px;
+  margin-right: 47px;
+}
+.resume-card .card-title {
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #474747;
+}
+.resume-card .card-info {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #757575;
+}
+.resume-card .card-text {
+  font-size: 16px;
+  line-height: 28px;
+  color: #757575;
 }
