--- a/style.css
+++ b/style.css
@@ -42,13 +42,16 @@
   line-height: 30px;
   color: #757575;
 }
+.tex-center {
+  text-align: center;
+}
 
 /* main style */
 
 header {
   background-color: #fff8f3;
   background: url(./images/developer.png), url(./images/header_bg.png), #fff8f3;
-  background-position: top left, bottom right;
+  background-position: 23px 38px, bottom right;
   background-repeat: no-repeat;
   padding-top: 50px;
 }
@@ -202,5 +205,51 @@ nav .menu a {
 .resume-card .card-text {
   font-size: 16px;
   line-height: 28px;
+  color: #757575;
+}
+footer {
+  margin-top: 130px;
+  background-color: #fff8f3;
+  padding: 130px 0;
+}
+footer .fotter-container {
+  width: 71%;
+  max-width: 1140px;
+  margin: 0 auto;
+  display: flex;
+  gap: 116px;
+}
+
+.fotter-container h2 {
+  font-size: 35px;
+  color: #181818;
+  margin-bottom: 20px;
+}
+.fotter-container .social {
+  max-width: 562px;
+}
+.fotter-container .social p {
+  color: #474747;
+  list-style: 28px;
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+.fotter-container .icon a {
+  margin-right: 24px;
+}
+.fotter-container .form {
+  width: 461px;
+  padding: 18px 31px;
+  margin-bottom: 24px;
+  border: none;
+  border-radius: 5px;
+  color: #757575;
+}
+.fotter-container .text-m {
+  width: 461px;
+  padding: 18px 31px;
+  margin-bottom: 24px;
+  border: none;
+  border-radius: 5px;
   color: #757575;
 }
