--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ nav .menu a {
   margin-bottom: 30px;
 }
 #banner .banner-image img {
+  width: 600px;
   max-width: 585px;
   vertical-align: middle;
 }
